testing that we can render index.html and also at the same pass in a query parameter and add it to the html

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ axum = "0.6.20"
 eyre = "0.6.8"
 fs = "0.0.5"
 reqwest = "0.11.18"
+serde = { version = "1.0.183", features = ["derive"] }
 tera = "1.19.0"
 tokio = { version = "1.31.0", features = ["macros", "rt-multi-thread"] }
 tower-http = { version = "0.4.3", features = ["trace", "fs"] }
